--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,19 +43,25 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
         docker push -a $ECR_REGISTRY/$ECR_REPOSITORY
 
+    - name: Download task definition
+      run: |
+          aws ecs describe-task-definition --task-definition muneeb-taskdefinition \
+          --query taskDefinition > task-definition.json
+          
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
-        container-name: my-container
-        image: ${{ steps.build-image.outputs.image }}
-
+          task-definition: task-definition.json
+          container-name: muneeb-container
+          image: 678878256416.dkr.ecr.us-east-1.amazonaws.com/muneeb-ecr-ecs-githubactions:latestv1
+          
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: my-service
-        cluster: Muneeb-Clusters 
-        wait-for-service-stability: true
+          task-definition: task-definition.json
+          service: muneeb-service
+          cluster: Muneeb-Cluster
+          wait-for-service-stability: true
+
  
